# artist-webui

./: Cargo.toml  README.md  fuck.md  webui.lua
src/: json.rs  lib.rs  main.rs
src/api/: artist.rs  mod.rs
src/websocket/: mod.rs
templates/: index.html.tera  layout.html.tera
