[package]
name = "artist-webui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.18.1"
